<resources>
    <string name="app_name">Utility Application</string>
    <string name="snack_bar_toast">Snack Bar and Toast</string>
    <string name="show_snackbar">Show Snackbar</string>
    <string name="show_toast">Show Toast</string>
    <string name="show_snackbar_with_action_button">Show Snackbar with action button</string>
    <string name="snackbar_with_color">Show SnackBar with custom color</string>
    <string name="coordinator_layut_info">The root layout of this xml is Co-ordinator Layout. It is needed so that we can have interactions with snackbar available such as swipe to dismiss snackbar. CoOrdinator layout is used for controlling interactions within the views</string>
    <string name="notifications">Notifications</string>
    <string name="array_adapter">Array Adapter</string>
    <string name="custom_array_adapter">Custom Array Adapter</string>
    <string name="array_adapters">Array Adapters</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="fragment_one_title">Fragment one</string>
    <string name="fragment_two_title">Fragment two</string>
    <string name="fragment_three_title">Fragment three</string>
    <string name="recycler_view">Recycler View</string>
    <string name="tabs_activity">Tabs Activity</string>
    <string name="title_activity_navbar">NavbarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bottom_navbar">bottom navbar</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="drawer_activity">Drawer Activity</string>
    <string name="asynchronous_task">Asynchronous Task</string>
    <string name="api_call">API call</string>
    <string name="broadcast">Broadcast</string>

    <string name="power_connected">Power connected!</string>
    <string name="power_disconnected">Power disconnected!</string>
    <string name="custom_broadcast_toast">Custom Broadcast Received</string>
    <string name="send_custom_broadcast">Send Custom Broadcast</string>
    <string name="receiver_on">Receiver On</string>
    <string name="receiver_off">Receiver Off</string>
    <string name="unknown_action">unknown intent action</string>
    <string name="cancel_me">Cancel Me!</string>
    <string name="update_notification">Updates Notification of channel one</string>
    <string name="alarm_manager">Alarm Manager</string>
    <string name="alarm_off">Alarm OFF</string>
    <string name="alarm_on">Alarm ON</string>
    <string name="alarm_on_toast">alarm is set to on</string>
    <string name="alarm_off_toast">Alarm is set off</string>
    <string name="required_network_type">Network Type Required</string>
    <string name="none">none</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="requires">Requires :</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device charging</string>
    <string name="override_deadline">Override Deadline</string>
    <string name="not_set">Not set</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Job</string>
    <string name="job_scheduler">Job Scheduler</string>

    <string name="seconds">%1$d s</string>
    <string name="job_service">Job Service</string>
    <string name="job_running">Your Job ran to completion!</string>
    <string name="job_service_notification">Job Service notification</string>
    <string name="notification_channel_description">Notifications from Job Service</string>
    <string name="job_scheduled">Job Scheduled, will run when the constraints are met</string>
    <string name="no_constraint_toast">Please set at least one constraint</string>
    <string name="jobs_canceled">Jobs Canceled</string>

    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button">Green</string>

    <!-- Button label for red button -->
    <string name="red_button">Red</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Default string for count TextView -->
    <string name="default_count">0</string>

    <!-- Button label for Count button -->
    <string name="count_button">Count</string>

    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>
    <string name="shared_preferences">Shared Preferences</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
