<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:text="@string/required_network_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <RadioGroup
        android:id="@+id/networkOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/noNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/anyNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any" />

        <RadioButton
            android:id="@+id/wifiNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:text="@string/requires"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/idleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/device_idle" />

        <Switch
            android:id="@+id/chargingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/device_charging" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/seekBarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override_deadline"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/seekBarProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/view_margin"
        android:onClick="scheduleJob"
        android:text="@string/schedule_job" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/view_margin"
        android:onClick="cancelJobs"
        android:text="@string/cancel_jobs" />
</LinearLayout>