<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="snackBar"
            type="com.utility.application.SnackBarActivity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackbarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SnackBarActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/coordinator_layut_info"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="@{snackBar::onShowToast}"
                android:text="@string/show_toast" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="@{snackBar::onShowSnackBar}"
                android:text="@string/show_snackbar" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="@{snackBar::onShowSnackBarWithAction}"
                android:text="@string/show_snackbar_with_action_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="@{snackBar::onShowSnackBarWithTextColor}"
                android:text="@string/snackbar_with_color" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>